<resources>
    <string name="tfe_qa_app_name" translatable="false">TFL Question and Answer</string>
    <string name="tfe_qa_banner_description" translatable="false">Banner</string>
    <string name="tfe_qa_title_dataset_hint_text" translatable="false">Please select an article below.</string>
    <string name="tfe_qa_you_might_want_to_ask" translatable="false">You might want to ask?</string>
    <string name="tfe_qa_text_query" translatable="false">Text query</string>
    <string name="tfe_qa_ask_question" translatable="false">Ask question</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="Daniel" translatable="false">Daniel Nguyen</string>
    <string name="Andrew" translatable="false">Andrew Best</string>
    <string name="Arvind" translatable="false">Arvind Sahota</string>
    <string name="Johnson" translatable="false">Johnson Huynh</string>
    <string name="Alec" translatable="false">Alec Tarrant</string>

    <!--LoginActivity -->
    <string name="banner_title">HealthChat</string>
    <string name="loginText">Sign In</string>
    <string name="loginHint">Example@example.com</string>
    <string name="passwordHint">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="forgotText">Forgot Username/Password?</string>
    <string name="signInWithText">Sign in with:</string>
    <string name="loginError">Incorrect Username/Password</string>

    <!--MainActivity-->
    <string name="aboutButton">About Us</string>
    <string name="historyButton">Diagnosis History</string>
    <string name="chatButton">Chat Button</string>

    <!--HistoryActivity-->
    <string name="historyText">Diagnosis History</string>
    <string name="clear_hist">Clear History?</string>
    <string name="delete_history">Are you sure you want to clear your diagnosis history?</string>

    <!--ChatActivity-->
    <string name="SendButton">Send</string>
    <string name="defaultResponse">You are in imminent danger! Please call (***) ***-****</string>

    <!--    EditProfiles   -->
    <string name="edit_info">Edit Info</string>
    <string name="exit">Exit</string>
    <string name="ok">Ok</string>
    <!--    SharedPreferencesActivity   -->
    <string name="name">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_unknown">undetermined</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="preference_name">DefaultEmail</string><!--do not change file name-->
    <string name="key_name">name</string>
    <string name="key_email">email</string>
    <string name="key_gender">gender</string>
    <string name="save_message">Saved</string>

</resources>
