<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutButton"
        android:textColor="#2f5751"
        android:textSize="50dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:background="#80ffffff"/>

    <TextView
        android:id="@+id/signInText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Daniel"
        android:textColor="#2f5751"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@id/aboutText"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/danielsdog"/>

    <TextView
        android:id="@+id/andrewDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signInText"
        android:gravity="center"
        android:text="@string/Andrew"
        android:textColor="#2f5751"
        android:textSize="30dp"
        android:textStyle="bold" />

</RelativeLayout>